fix last image layout issue

--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,7 @@ p {
 
 .main .image:nth-of-type(4) {
   grid-area: 2 / 3 / 4 / 4;
+  height: 100%;
 }
 
 .main .image:nth-of-type(5) {
